# packrat

./: CMakeLists.txt  README.md
apps/gui/: main.c
docs/: api.md  architecture.md  manifest_schema.md  proposal.md
include/packrat/: build.h  gui.h  runtime.h
src/: build.c  manifest.c  manifest.h  runtime.c  status.c
src/cli/: main.c
src/gui/: app.c  nuklear_backend.c  nuklear_backend.h
